Jann 30/objects/Approver_Group__c.object
<CustomObject>
    <description>Approver Groups</description>
    <fields>
        <fullName>Approver_GroupName__c</fullName>
        <formula>TEXT(Level__c)   &amp;  &apos; &apos; &amp;   Approver_Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approver Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Group_Description__c</fullName>
        <description>Approver Group Description</description>
        <label>Approver Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <description>Approver Role</description>
        <label>Approver Role</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level</description>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>KEYOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr. EXEC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>RFA Approver Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver_GroupName__c</columns>
        <columns>Level__c</columns>
        <columns>Approver_Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Approver Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFA Approver Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>